# homework

./: .gitignore  Makefile  README.md
.cursor/: mcp.json
backend/: .env.example  .gitignore  README.md  dataset  docker-compose.yml  model_config.yaml.example  pyproject.toml
backend/dataset/: README.md
backend/dataset/labels/ground_truth/: 22a2da33-2f4a-499f-afcc-d1eb59037332_annotations.json  62febf3ca4b6a8d938814463_preview-dropdown_annotations.json  6cc39b7a7bbe78c2724afce6a1acfae1da5999d7_annotations.json  Frame 18_annotations.json  Frame 372_annotations.json  Frame 529_annotations.json  Section 13_annotations.json  ae719d5181188a447ca01ae586598c9d_annotations.json  creative_www.photopea.com_1729629927_annotations.json  creative_www.pixilart.com_1729627000_annotations.json  creative_www.pixilart.com_1729629929_annotations.json  creative_www.pixilart.com_1729631855_annotations.json  creative_www.remove.bg_1729627000_annotations.json  creative_www.remove.bg_1729629925_annotations.json  creative_www.remove.bg_1729631855_annotations.json  dashboards_grafana.com_1729626937_annotations.json  dashboards_grafana.com_1729629708_annotations.json  dashboards_newrelic.com_1729626937_annotations.json  dashboards_newrelic.com_1729629709_annotations.json  (+80 more)
backend/scripts/: check_job_status.py  check_s3.py
backend/src/: README.md  api.py  base_router.py  cli.py  constants.py  init_db.py  llm.py  main.py  models.py  redis_pubsub.py  schemas.py  settings.py  storage.py  websocket_manager.py
backend/src/batch/: __init__.py  processor.py
backend/src/celery/: __init__.py  app.py  config.py  models.py  tasks.py  worker.py
backend/src/cli/: detection_evaluator.py  formatter.py  main.py  match_predictions_to_ground_truth.py  parser.py
backend/src/database/: core.py
backend/src/db/: database.py
backend/src/evaluate/: __init__.py  calculate_iou.py  calculate_metrics.py  detection_evaluator.py  formatter.py  match_predictions_to_ground_truth.py  models.py  parser.py
backend/src/queue/: __init__.py  app.py  config.py  router.py  tasks.py  worker.py
backend/src/storage/: s3.py
backend/src/ws/: pubsub.py  router.py  websocket.py
backend/test_data/: evaluation_results.json
backend/test_data/ground_truth/: test2_annotations.json  test_image_annotations.json
backend/test_data/predictions/: test2_annotations.json  test_image_annotations.json
backend/tests/: test_cli.py  test_evaluate.py  test_metrics.py
(+163 files in other folders)
