[project]
name = "backend"
version = "0.1.0"
description = "UI Annotation Backend and CLI Tools"
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi[standard]>=0.114.2",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.6",
    "litellm>=1.35.8",
    "pyyaml>=6.0.1",
    "json-repair>=0.47.8",
    "click>=8.1.7",
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",
    "boto3>=1.34.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
]

[project.scripts]
cli = "src.cli:cli"

[tool.uv]
dev-dependencies = [
    "ruff<1.0.0,>=0.2.2",
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]
